# Compiler_101

./: CMakeLists.txt  README.md  main.cpp
cache_assignment/: README.md  main.cpp
cache_assignment/Cache/: cache.cpp
cfcss_implementation/: CMakeLists.txt  README.md
cfcss_implementation/CFCSS/: CFCSS.cpp  CMakeLists.txt
cfcss_implementation/illegal_generator/: CMakeLists.txt  illegal_generator.cpp
data_layout_assignment/: CMakeLists.txt  README.md
data_layout_assignment/FieldStatus/: CMakeLists.txt  FieldStatus.cpp
lexer/: lexer.cpp  token.h
mlir_pass_assignment/: README.md  counter.cpp
passes_assignment/: CMakeLists.txt  README.md
passes_assignment/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
programming_assignment/: README.md  main.py
programming_assignment/dominator_tree/: dominator_tree.py
programming_assignment/optimizer/: optimizer.py
programming_assignment/sample_outputs/: cfg  dominator_tree  ssa
programming_assignment/ssa_converter/: ssa_converter.py
programming_assignment/utils/: utils.py
scalar_evolution_assignment/: CMakeLists.txt  README.md
scalar_evolution_assignment/VectorizationAccess/: CMakeLists.txt  VectorizationAccess.cpp
toy_lang_assigment/: README.md
